--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="tree-736885__480-modified.png" alt="hii this is mee"</img></td>
+            <td><img src="image/image.png" alt="hii this is mee"</img></td>
             <td><h1>Sai Gokul Reddy</h1></td>
             <td><p><em>student of <strong><a href="https://bit-bangalore.edu.in/">Bangalore Institute Of Technology</a></strong></em></p></td>
             <td><p><em>interested in building new websites and learning new technologies</em></p></td>
